# bevy_app_compute

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/shaders/: boids.wgsl  first_pass.wgsl  game_of_life.wgsl  heavy_work.wgsl  second_pass.wgsl  simple.wgsl  sph.wgsl  sph_density.wgsl  sph_parameters.wgsl
examples/: async_heavy_work.rs  boids.rs  multi_pass.rs  one_shot.rs  simple.rs  sph.rs
examples/boids/: main.rs  worker.rs
examples/game_of_life/: bind_groups.rs  main.rs  worker.rs
examples/game_of_life/render/: draw_plugin.rs  graph_node.rs  pipeline.rs
src/: app_compute.rs  error.rs  lib.rs  pipeline.rs  pipeline_cache.rs  plugin.rs  traits.rs  worker.rs  worker_builder.rs
tests/: simple_test.rs
tests/common/: mod.rs
