[package]
name = "bevy_app_compute"
version = "0.16.0"
authors = [
    "Cornchip <cornchipgonecodin@gmail.com>",
    "Kjolnyr <kjolnyr@protonmail.com>",
]
edition = "2024"
description = "An easy way to run compute shaders for Bevy"
repository = "https://github.com/Kjolnyr/bevy_app_compute"
homepage = "https://github.com/Kjolnyr/bevy_app_compute"
documentation = "https://docs.rs/bevy_app_compute"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development", "bevy"]

[features]
shader_format_spirv = ["wgpu/spirv"]
shader_format_wesl = ["wesl"]
webgl = []

[lib]
doctest = false

[dependencies]
parking_lot = ">=0.12.3"
bytemuck = ">=1.16.1"
wesl = { version = "0.1.2", optional = true }

# The following are only needed to support the `pipeline_cache` "hack". See issue in bevy_easy_compute:
# https://github.com/AnthonyTornetta/bevy_easy_compute/issues/7
# Make sure these match bevy's versions
wgpu = { version = "24.0.0", features = ["naga-ir"] }
naga = { version = "24.0.0", features = ["wgsl-in"] }
naga_oil = { version = "0.17.0", default-features = false, features = [
    "test_shader",
] }
futures-lite = "2.0.1"
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] } 

[dependencies.bevy]
version = "0.16.0"
default-features = false
# See https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md
features = [
  "bevy_core_pipeline",

  # TODO: is this inherited by downstream users? If so, then we probably don't need it
  "multi_threaded",
]

[dev-dependencies]
rand = ">=0.9.1"

[dev-dependencies.bevy]
version = "0.16.0"
default-features = false
features = [
  "animation",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_ui",
  "multi_threaded",
  "png",
  "x11",
  "bevy_winit",
  "bevy_window",
]

[[example]]
name = "simple"

[[example]]
name = "multi_pass"

[[example]]
name = "one_shot"

[[example]]
name = "boids"
